--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/personal-portfolio/assets/index.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
   </body>
